--- a/src/app/housecleaning/housecleaning.component.css
+++ b/src/app/housecleaning/housecleaning.component.css
@@ -67,6 +67,11 @@
 .close-button{
     float: right;
     top:-24px;
-    right:-15px;
+    margin: auto;
+}
+.close-icon{
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
 
