--- a/src/app/refrigeratordetails/refrigeratordetails.component.css
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.css
@@ -4,57 +4,49 @@
     font-family: 'Trebuchet MS';
     margin-left: 18px;
 }
-
 .servicetype
 {
     margin-left: 40px;
     margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
-
 .zipcode
 {
     margin-left: 40px;
     margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
-
-.airconselect
+.refrigeratorselect
 {
     margin-left: 40px;
     margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
-
 .h2title
 {
     font-size: 30px;
     font-family: 'Trebuchet MS';
     margin-left: 18px; 
 }
-
-.airconbrand
+.refregieratorbrand
 {
     margin-left: 40px;
     margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
-
 .unittype
 {
     margin-left: 40px;
     margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
-
-.airconprob
+.refrigeratorprob
 {
     width: 690px;
     margin-left: 40px;
     margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
-
 .mat-icon
 {
     margin-right: 20px;
@@ -69,7 +61,6 @@
     height: 50px;
     width: 500px;
 }
-
 .mat-raised-button
 {
     font-family: 'Trebuchet MS';
