--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -6,19 +6,16 @@
     border: 1px solid #E5E5E5;
     border-radius: 30px;
   }
-  
   .mat-drawer
   {
   width: 280px;
   background-color: #14213D;
   }
-  
   .mat-drawer-content
   {
   height: 910px;
   background-color: white;
   }
-  
   .logo
   {
     width: 170px;
@@ -26,7 +23,6 @@
     margin-top: 50px;
     margin-left: 50px;
   }
-  
   .dashboardside
   {
   margin-left: 40px;
@@ -40,32 +36,26 @@
   margin-left: 10px;
   margin-top: 120px;
   }
- 
   .homeicon
   {
     color: white;
     font-size: 25px;
   }
-  
   .mat-tab-group
   {
       width: 1000px;
       margin-top: 50px;
       margin-left: 70px;
   }
-  
   .bookingside
   {
   margin-left: 40px;
-  
   }
-  
   .bookingicon
   {
     color: white;
     font-size: 25px;
   }
-  
   .bookingBtn
   {
   color: white;
@@ -74,19 +64,15 @@
   margin-left: 10px;
   margin-top: 30px;
   }
-  
   .profileside
   {
   margin-left: 40px;
-  
   }
-  
   .profileicon
   {
     color: white;
     font-size: 25px;
   }
-  
   .profileBtn
   {
   color: white;
@@ -95,17 +81,14 @@
   margin-left: 10px;
   margin-top: 30px;
   }
-  
   .services
   {
-  
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 30px;
   color: #14213D;
   margin-top: 40px;
   margin-left: 50px;
   }
-  
   .inboxicon
   {
     font-size: 30px;
@@ -114,7 +97,6 @@
     margin-right: 200px;
     margin-top: -53px;
   }
-  
   .logouticon
   {
     font-size: 30px;
@@ -123,7 +105,6 @@
     margin-right: 140px;
     margin-top: -53px;
   }
-  
   .logoutBtn
   {
     font-size: 18px;
@@ -132,7 +113,6 @@
     margin-right: 50px;
     margin-top: -55px;
   }
-
 .h1services
 {
     font-family: 'Trebuchet MS';
@@ -140,112 +120,96 @@
 .appliancescard
 {
     margin-top: 80px;
-    margin-left: 320px;
-    width: 200px;
-    height: 200px;
+    margin-left: 230px;
+    width: 250px;
+    height: 250px;
 }
-  
-
 .h1appliances
 {
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    margin-top: -5px;
-    margin-left: 15px;
+  font-family: 'Trebuchet MS';
+  font-size: 20px;
+  justify-content: center;
+  display: flex;
+  margin: auto;
 }
 
 .electricalcard
 {
-    margin-top: -235px;
-    margin-left: 615px;
-    width: 200px;
-    height: 200px;
+    margin-top: -283px;
+    margin-left: 560px;
+    width: 250px;
+    height: 250px;
 }
-
 .h1electrical
 {
     font-family: 'Trebuchet MS';
-    font-size: 18px;
-    margin-left: -10px;
+    font-size: 20px;
+    justify-content: center;
+    display: flex;
+    margin: auto;
 }
-
 .cleaningcard
 {
-    margin-top: -230px;
-    margin-left: 900px;
-    width: 200px;
-    height: 200px;
+    margin-top: -282px;
+    margin-left: 890px;
+    width: 250px;
+    height: 250px;
 }
-
 .h1cleaning
 {
     font-family: 'Trebuchet MS';
-    font-size: 18px;
-    margin-left: 32px;
+    font-size: 20px;
+    justify-content: center;
+    display: flex;
+    margin: auto;
 }
-
 .h1serviceneed
 {
     font-family: 'Trebuchet MS';
-    font-size: 28px;
+    font-size: 35px;
     color: #14213D;
-    margin-top: 200px;
-    margin-left: 320px;
+    margin-top: 150px;
+    margin-left: 150px;
 }
-
 .dashlink
 {
     color: white;
-    text-decoration: none;
-    
+    text-decoration: none; 
 }
-
-
 .bookinglink
 {
 color: white;
 text-decoration: none;
 }
-
 .profilelink
 {
     color: white;
     text-decoration: none;
 }
-    
 .dashlink:hover 
 {
     background-color: #FCA311;
     color: #14213D;
-   
 }
-
 .bookinglink:hover 
 {
     background-color: #FCA311;
     color: #14213D;
-   
 }
-
 .profilelink:hover 
 {
     background-color: #FCA311;
     color: #14213D;
-   
 }
-
 .paymentside
 {
 margin-left: 40px;
-
 }
-
 .paymenticon
 {
   color: white;
   font-size: 25px;
 }
-
 .paymentBtn
 {
 color: white;
@@ -253,7 +217,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-size: 18px;
 margin-left: 10px;
 margin-top: 25px;
-
 }
 .paymentlink
 {
