--- a/src/app/washingmachinedetails/washingmachinedetails.component.css
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.css
@@ -19,7 +19,7 @@
     font-family: 'Trebuchet MS';
 }
 
-.airconselect
+.washingmachineselect
 {
     margin-left: 40px;
     margin-top: 10px;
@@ -33,21 +33,14 @@
     margin-left: 18px; 
 }
 
-.airconbrand
+.washingmachinebrand
 {
     margin-left: 40px;
     margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
 
-.unittype
-{
-    margin-left: 40px;
-    margin-top: 10px;
-    font-family: 'Trebuchet MS';
-}
-
-.airconprob
+.washingmachineprob
 {
     width: 690px;
     margin-left: 40px;
@@ -84,7 +77,7 @@
 .close-button{
     float: right;
     top:-24px;
-    right:-15px;
+    margin: auto;
 }
 .close-icon{
     margin: auto;
