mat dialog close

--- a/src/app/aircondetails/aircondetails.component.html
+++ b/src/app/aircondetails/aircondetails.component.html
@@ -111,7 +111,7 @@
     </div>
 
     <div>
-        <button class="done" mat-raised-button><a routerLink="/servicedetails">Done</a></button>
+        <button class="done" mat-raised-button mat-dialog-close routerLink="/servicedetails">Done</button>
     </div>
 </div> 
  
