--- a/src/app/electrical/electrical.component.html
+++ b/src/app/electrical/electrical.component.html
@@ -12,13 +12,13 @@
         <!-- mat-button (click)="" -->
         <img class="lightsimg"  mat-card-image src="../../assets/electricalicon.png">
             <mat-card-content>
-                <button class="h1lights" >Lights</button>
+                <button class="h1lights" mat-button >Lights</button>
             </mat-card-content>
     </mat-card>
     <mat-card class="outletcard">
         <img class="outletimg" mat-card-image src="../../assets/poweroutlet.png">
             <mat-card-content>
-                <button class="h1outlet" >Power Outlet</button>
+                <button class="h1outlet" mat-button >Power Outlet</button>
             </mat-card-content>
     </mat-card>
 </div>
