--- a/src/app/electricfandetails/electricfandetails.component.html
+++ b/src/app/electricfandetails/electricfandetails.component.html
@@ -80,7 +80,7 @@
     </div>
 
     <div>
-        <button class="done" mat-raised-button><a routerLink="/servicedetails">Done</a></button>
+        <button class="done" mat-raised-button routerLink="/servicedetails" mat-dialog-close>Done</button>
         
     </div>
 </div> 
