--- a/src/app/housecleaning/housecleaning.component.html
+++ b/src/app/housecleaning/housecleaning.component.html
@@ -10,31 +10,30 @@
   <div>
   
   <mat-card class="airconcard">
-      <img class="airconimg" mat-button (click)="AirconOpenDialog()" mat-card-image src="../../assets/airconicon.png">
+      <img class="airconimg" mat-button (click)="AirconOpenDialog()" mat-card-image src="../../assets/airconicon.png"mat-dialog-close>
           <mat-card-content>
-              <button class="h1aircon" mat-button (click)="AirconOpenDialog()">General Cleaning</button>
+              <button class="h1aircon" mat-button (click)="AirconOpenDialog()" mat-dialog-close>General Cleaning</button>
           </mat-card-content>
   </mat-card>
   
-  
   <mat-card class="refcard">
-  <img class="refimg" mat-button (click)="RefrigeratorOpenDialog()" mat-card-image src="../../assets/reficon.png">
+  <img class="refimg" mat-button (click)="RefrigeratorOpenDialog()" mat-card-image src="../../assets/reficon.png"mat-dialog-close>
     <mat-card-content>
-        <button class="h1ref" mat-button (click)="RefrigeratorOpenDialog()">Pest Control</button>
+        <button class="h1ref" mat-button (click)="RefrigeratorOpenDialog()" mat-dialog-close>Pest Control</button>
     </mat-card-content>
   </mat-card>
   
   <mat-card class="efancard">
-  <img class="efanimg" mat-button (click)="ElectricfanOpenDialog()" mat-card-image src="../../assets/appliancesicon.png">
+  <img class="efanimg" mat-button (click)="ElectricfanOpenDialog()" mat-card-image src="../../assets/appliancesicon.png"mat-dialog-close>
     <mat-card-content>
-        <button class="h1efan" mat-button (click)="ElectricfanOpenDialog()">Defogging</button>
+        <button class="h1efan" mat-button (click)="ElectricfanOpenDialog()" mat-dialog-close>Defogging</button>
     </mat-card-content>
   </mat-card>
   
   <mat-card class="washingcard">
-  <img class="washingimg" mat-button (click)="WashingmachineOpenDialog()" mat-card-image src="../../assets/washingicon.png">
+  <img class="washingimg" mat-button (click)="WashingmachineOpenDialog()" mat-card-image src="../../assets/washingicon.png"mat-dialog-close>
     <mat-card-content>
-        <button class="h1washing" mat-button (click)="WashingmachineOpenDialog()">Disinfecting</button>
+        <button class="h1washing" mat-button (click)="WashingmachineOpenDialog()" mat-dialog-close>Disinfecting</button>
     </mat-card-content>
   </mat-card>
   </div>
