--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -33,9 +33,15 @@
 
           <mat-tab class="signupTab" label="Signup">
             <p>
-              <mat-form-field class="signup-namefield" appearance="outline">
-                <mat-label>Full Name</mat-label>
-                <input matInput type="fullname" name="fullname" ngModel fullname="true" placeholder="Enter full name" required>
+              <mat-form-field class="signup-fnamefield" appearance="outline">
+                <mat-label>First Name</mat-label>
+                <input matInput type="firstname" name="firstname" ngModel firstname="true" placeholder="Enter first name" required>
+              </mat-form-field>
+            </p>
+            <p>
+              <mat-form-field class="signup-lnamefield" appearance="outline">
+                <mat-label>Last Name</mat-label>
+                <input matInput type="lastname" name="lastname" ngModel lastname="true" placeholder="Enter last name" required>
               </mat-form-field>
             </p>
       
