--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -1,16 +1,29 @@
 .example-container {
-    max-width: 95%;
+    max-width: 100%;
     min-height: 910px;
     margin-top: 10px;
-    margin-left: 50px;
+    margin-left: 0px;
     border: 1px solid #E5E5E5;
     border-radius: 30px;
   }
-  
+ 
+  .toolbar
+  {
+    background-color: #FCA311;
+    margin-top: -20px;
+  }
+
+  .techleantxt
+  {
+    width: 155px;
+    height: 125px;
+    padding-top: 40px;
+  }
+
   .mat-drawer
   {
-  width: 280px;
-  background-color: #14213D;
+  width: 260px;
+  background-color:  #14213D;
   }
   
   .mat-drawer-content
@@ -54,19 +67,20 @@
       margin-left: 70px;
   }
   
-  .bookingside
+  .workerside
   {
   margin-left: 40px;
   
   }
   
-  .bookingicon
+  .workericon
   {
     color: white;
     font-size: 25px;
+    margin-left: 40px;
   }
   
-  .bookingBtn
+  .workerBtn
   {
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -123,32 +137,14 @@
     color: white;
   }
   
-  .welcome
-  {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  color: #14213D;
-  float: right;
-  margin-top: -40px;
-  margin-right: 350px;
-  }
-  .dashboardtxt
-  {
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 30px;
-  color: #14213D;
-  margin-top: 40px;
-  margin-left: 50px;
-  }
   
   .inboxicon
   {
     font-size: 30px;
     color: #14213D;
     float: right;
-    margin-right: -250px;
-    margin-top: -40px;
+    margin-right: -1260px;
+    margin-top: 10px;
   }
   
   .logouticon
@@ -156,19 +152,9 @@
     font-size: 30px;
     color: #14213D;
     float: right;
-    margin-right: -300px;
-    margin-top: -40px;
+    margin-right: -1320px;
+    margin-top: 10px;
   }
-  
-  .logoutBtn
-  {
-    font-size: 18px;
-    color: #14213D;
-    float: right;
-    margin-right: -390px;
-    margin-top: -45px;
-  }
-  
   
   .dashlink
   {
@@ -177,7 +163,7 @@
       
   }
   
-  .bookinglink
+  .workerlink
   {
   color: white;
   text-decoration: none;
@@ -210,52 +196,89 @@
      
   }
   
-  .reqstatus
+  .adminicon
   {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    color: #14213D;
-    margin-left: 50px;
-    margin-top: 50px;
-  }
- .pendingcard
- {
-     width: 250px;
-     height: 95px;
-     margin-left: 50px;
-     margin-top: 20px;
+    width: 250px;
+    height: 180px;
+    margin-left: 90px;
+ 
     
- }
+  }
 
- .pendingtxt
+ .workercard
  {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #14213D;
-    margin-top: -105px;
+     width: 280px;
+     height: 40px;
+     float: right;
+     margin-right: 700px;
+     margin-top: -180px;
  }
 
- .pendingcount
+
+ .workertxt
  {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Trebuchet MS';
     font-size: 18px;
-    color: #14213D;
-    margin-top: -10px;
+    color: white;
+    margin-top: -85px;
+    margin-left: 125px;
  }
 
-.pendingbg
+ .workercount
+ {
+    font-family: 'Trebuchet MS';
+    font-size: 18px;
+    color: white;
+    margin-top: -5px;
+    margin-left: 125px;
+ }
+
+.workerbg
 {
-    width: 283px;
-    height: 130px;
+    width: 313px;
+    height: 80px;
 }
 
 
+ .registeredcard
+ {
+  width: 280px;
+  height: 40px;
+  float: right;
+  margin-right: 700px;
+  margin-top: -80px;
+ }
+
+ .registeredtxt
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -85px;
+  margin-left: 125px;
+ }
+
+ .registeredcount
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -5px;
+  margin-left: 125px; 
+ }
+
+ .registeredbg
+ {
+  width: 313px;
+  height: 80px;
+ }
+
  .completedcard
  {
-    width: 250px;
-    height: 95px;
-    margin-left: 350px;
-    margin-top: -128px;
+    width: 280px;
+    height: 80px;
+    margin-left: 790px;
+    margin-top: -112px;
  }
 
  .completedtxt
@@ -263,7 +286,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     color: #14213D;
-    margin-top: -105px;
+    margin-top: -70px;
  }
 
  .completedcount
@@ -276,16 +299,17 @@
 
  .completedbg
  {
-    width: 283px;
-    height: 130px;
+    width: 313px;
+    height: 80px;
  }
-
- .cancelledcard
+ 
+  .cancelledcard
  {
-    width: 250px;
-    height: 95px;
-    margin-left: 650px;
-    margin-top: -128px;
+    width: 280px;
+    height: 80px;
+    float: right;
+    margin-right: 185px;
+    margin-top: -112px;
  }
 
  .cancelledtxt
@@ -293,7 +317,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     color: #14213D;
-    margin-top: -105px;
+    margin-top: -70px;
  }
 
  .cancelledcount
@@ -306,14 +330,140 @@
 
  .cancelledbg
  {
-    width: 283px;
-    height: 130px;
+    width: 313px;
+    height: 80px;
+ }
+
+ .mat-tab-group
+ {
+    width: 1350px;
+ }
+
+ .searchfield
+ {
+   height: 30px;
+   width: 300px;
+   font-family: 'Trebuchet MS';
+   float: right;
+   margin-top: -40px;
  }
  
- .pendingcard2
+ .newreq
  {
-     margin-left: 50px;
-     margin-top: 50px;
-     width: 850px;
-     height: 400px;
+   margin-left: 20px;
+   margin-top: 15px;
+   width: 1290px;
+   height: 450px;
+   border: 2px solid #E5E5E5;
  }
+ 
+ .h1new
+ {
+   font-size: 18px;
+   font-family: 'Trebuchet MS';
+   margin-left: 10px;
+ }
+
+ .pendingreq
+ {
+   margin-left: 15px;
+   margin-top: 15px;
+   width: 1290px;
+   height: 450px;
+   border: 2px solid #E5E5E5;
+ }
+ 
+ .h1pending
+ {
+   font-size: 18px;
+   font-family: 'Trebuchet MS';
+   margin-left: 10px;
+ }
+
+ .completedreq
+{
+  margin-left: 20px;
+  margin-top: 15px;
+  width: 1290px;
+  height: 450px;
+  border: 2px solid #E5E5E5;
+}
+
+.h1completed
+{
+  font-size: 18px;
+  font-family: 'Trebuchet MS';
+  margin-left: 10px;
+}
+
+.cancelledreq
+{
+  margin-left: 20px;
+  margin-top: 15px;
+  width: 1290px;
+  height: 450px;
+  border: 2px solid #E5E5E5;
+}
+
+.h1cancelled
+{
+  font-size: 18px;
+  font-family: 'Trebuchet MS';
+  margin-left: 10px;
+}
+
+.serviceid
+{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: #14213D;
+    margin-top: 50px;
+    margin-left: 10px;
+}
+
+.name
+{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: #14213D;
+    margin-top: -25px;
+    margin-left: 180px;
+}
+
+.appdate
+{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: #14213D;
+    margin-top: -25px;
+    margin-left: 380px;
+}
+
+.time
+{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: #14213D;
+    margin-top: -25px;
+    margin-left: 580px;
+}
+
+.address
+{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: #14213D;
+    margin-top: -25px;
+    margin-left: 750px;
+}
+
+.dateapp
+{
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 13px;
+    color: #14213D;
+    margin-top: -25px;
+    margin-left: 980px;
+}
+
+
