--- a/src/app/housecleaning/housecleaning.component.html
+++ b/src/app/housecleaning/housecleaning.component.html
@@ -10,9 +10,9 @@
   <div>
   
   <mat-card class="airconcard">
-      <img class="airconimg" mat-button (click)="AirconOpenDialog()" mat-card-image src="../../assets/airconicon.png"mat-dialog-close>
+      <img class="airconimg" mat-button (click)="GencleanOpenDialog()" mat-card-image src="../../assets/airconicon.png"mat-dialog-close>
           <mat-card-content>
-              <button class="h1aircon" mat-button (click)="AirconOpenDialog()" mat-dialog-close>General Cleaning</button>
+              <button class="h1aircon" mat-button (click)="GencleanOpenDialog()" mat-dialog-close>General Cleaning</button>
           </mat-card-content>
   </mat-card>
   
