--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,68 +1,65 @@
+<div class="col-md-6 offset-md-3 mt-5">
 <div class="loginform">
-
     <mat-card class="logincard">
       <div fxLayoutAlign="end">
-        <button mat-icon-button class="close-button" [mat-dialog-close]="true">
-          <mat-icon class="close-icon" color="warn">close</mat-icon>
+        <button mat-icon-button class="close-button">
+          <mat-icon class="close-icon" color="warn" >close</mat-icon>
         </button>
       </div>
         <img class="logo" mat-card-image src="../../assets/techleanlogo.png">
         
       <div class="loginTabs">
         <mat-tab-group>
-          <mat-tab class="loginTab" label="Login">
-          <p>
-            <mat-form-field class="login-emailfield" appearance="outline">
-              <mat-label>Email Address</mat-label>
-              <input matInput type= "email" name="email" ngModel email="true" placeholder="Enter email address" required>
-            </mat-form-field>
-  
-            <mat-form-field class="login-passfield" appearance="outline">
-              <mat-label>Password</mat-label>
-              <input matInput type= "password" name="password" ngModel password="true" placeholder="Enter password" [type]="hide ? 'password' : 'text'" required>
-              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-              </button>
-             </mat-form-field>
-          </p>
-            <button mat-raised-button class="loginBtn"><a class="loginlink" routerLink="/dashboard">Login</a></button>
-            <button mat-raised-button class="fbBtn"><a class="fblink" routerLink="/dashboard">Login with Facebook</a></button>
-            <button mat-raised-button class="googleBtn"><a class="googlelink" routerLink="/dashboard">Login with Google Account</a></button>
-          </mat-tab>
-         
-
-          <mat-tab class="signupTab" label="Signup">
-            <p>
-              <mat-form-field class="signup-fnamefield" appearance="outline">
-                <mat-label>First Name</mat-label>
-                <input matInput type="firstname" name="firstname" ngModel firstname="true" placeholder="Enter first name" required>
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-form-field class="signup-lnamefield" appearance="outline">
-                <mat-label>Last Name</mat-label>
-                <input matInput type="lastname" name="lastname" ngModel lastname="true" placeholder="Enter last name" required>
-              </mat-form-field>
-            </p>
-      
-            <p>
-              <mat-form-field class="signup-emailfield" appearance="outline">
+            <mat-tab class="loginTab" label="Login">
+              <p>
+                <mat-form-field class="login-emailfield" appearance="outline">
                   <mat-label>Email Address</mat-label>
-                  <input matInput type="signup_email" name="signup_email" ngModel signup_email="true" placeholder="yourname@example.com" required>
-              </mat-form-field>
+                  <input matInput type= "email" ngModel login_email="true" placeholder="Enter email address" required>
+                </mat-form-field>
       
-              <mat-form-field class="signup-passfield" appearance="outline">
+                <mat-form-field class="login-passfield" appearance="outline">
                   <mat-label>Password</mat-label>
-                  <input matInput type="signup_password" name="signup_password" ngModel signup_password="true" placeholder="Enter password" [type]="hide ? 'password' : 'text'" required>
+                  <input matInput type= "password" ngModel login_password="true" placeholder="Enter password" [type]="hide ? 'password' : 'text'" required>
+
                   <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                   </button>
-              </mat-form-field>
-            </p>
-           
-            <button mat-raised-button class="signupBtn"><a class="signuplink" routerLink="/loginform">Signup</a></button>
-           
-          </mat-tab>
+                </mat-form-field>
+              </p>
+                <button mat-raised-button class="loginBtn" type="submit" ><a class="loginlink" routerLink="/dashboard">Login</a></button>
+                <button mat-raised-button class="fbBtn"><a class="fblink" routerLink="/dashboard">Login with Facebook</a></button>
+                <button mat-raised-button class="googleBtn"><a class="googlelink" routerLink="/dashboard">Login with Google Account</a></button>
+            </mat-tab>
+          
+            <mat-tab class="signupTab" label="Signup">
+              <p>
+                <mat-form-field class="signup-fnamefield" appearance="outline">
+                  <mat-label>First Name</mat-label>
+                  <input matInput id="fname" type="text" ngModel firstName="true" placeholder="Enter first name" required>
+                </mat-form-field>
+              </p>
+              <p>
+                <mat-form-field class="signup-lnamefield" appearance="outline">
+                  <mat-label>Last Name</mat-label>
+                  <input matInput id="lname" type="text" ngModel lastName="true" placeholder="Enter last name" required>
+                </mat-form-field>
+              </p>
+              <p>
+                <mat-form-field class="signup-emailfield" appearance="outline">
+                    <mat-label>Email Address</mat-label>
+                    <input matInput id="signup_email" type="email" ngModel signup_email="true" placeholder="yourname@example.com" required>
+                </mat-form-field>
+        
+                <mat-form-field class="signup-passfield" appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input matInput id="signup_password" type="password" ngModel signup_password="true" placeholder="Enter password" [type]="hide ? 'password' : 'text'" required>
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                </mat-form-field>
+              </p>
+              <button mat-raised-button class="signupBtn"><a class="signuplink">Signup</a></button>
+            </mat-tab>
         </mat-tab-group>
       </div>
     </mat-card>
