--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -65,6 +65,48 @@
                 <mat-label><mat-icon>find_in_page</mat-icon>Search..</mat-label>
                 <input matInput>
               </mat-form-field>
+              <div>
+                <h1 class="h1serviceid">Service ID</h1>
+ 
+               </div>
+ 
+               <div>
+                <h1 class="h1servicetype">Service Type</h1>
+               </div>
+ 
+               <div>
+                <h1 class="h1date">Date Requested</h1>
+              </div>
+ 
+              <div>
+               <h1 class="hserviceid">1234</h1>
+ 
+              </div>
+ 
+              <div>
+               <h1 class="hservicetype">Appliance Repair</h1>
+              </div>
+ 
+              <div>
+               <h1 class="hdate">May 07, 2021</h1>
+             </div>
+ 
+             <button class="detailsBtn" mat-button (click)="openDialog()">Details</button>
+ 
+             <div>
+               <h1 class="hserviceid">1234</h1>
+ 
+              </div>
+ 
+              <div>
+               <h1 class="hservicetype">Appliance Repair</h1>
+              </div>
+ 
+              <div>
+               <h1 class="hdate">May 07, 2021</h1>
+             </div>
+ 
+             <button class="detailsBtn" mat-button (click)="openDialog()">Details</button>
 
             
           </mat-card>
