--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -6,7 +6,7 @@
       
     <div class="dashboardside">
       <mat-icon class="homeicon" aria-hidden="false" aria-label>dashboard</mat-icon>
-      <button class="dashBtn" mat-button><a class="dashlink" routerLink="/dashboard">Dashboard</a></button>
+      <button class="dashBtn" mat-button><a class="dashlink">Dashboard</a></button>
     </div>
 
     <div class="workersside">
