--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -26,25 +26,49 @@
       </mat-toolbar>
     </p>
 
-
 <div>
-<img class="adminicon" mat-card-image src="../../assets/adminicon.png">
+  <h1 class="dashboardtxt">Dashboard</h1>
 </div>
 
 <div>
-  <mat-card class="workercard">
-    <img class="workerbg" mat-card-image src="../../assets/workerbg.jpg"> 
-      <h1 class="workertxt">New Requests</h1>
-        <h2 class="workercount">10</h2>
-  </mat-card>
+  
 
-  <mat-card class="registeredcard">
-    <img class="registeredbg" mat-card-image src="../../assets/reguserbg.jpg"> 
-      <h1 class="registeredtxt">Registered Users</h1>
-       <h2 class="registeredcount">10</h2>
+  <mat-card class="newreqcard">
+    <img class="newreqbg" mat-card-image src="../../assets/newreqbg.jpg"> 
+      <h1 class="newreqtxt">New Requests</h1>
+       <h2 class="newreqcount">10</h2>
   </mat-card>
     
- 
+  <mat-card class="completedcard">
+    <img class="completedbg" mat-card-image src="../../assets/completedbg.jpg"> 
+      <h1 class="completedtxt">Completed Requests</h1>
+       <h2 class="completedcount">10</h2>
+  </mat-card>
+
+  <mat-card class="pendingcard">
+    <img class="pendingbg" mat-card-image src="../../assets/pendingbg.jpg"> 
+      <h1 class="pendingtxt">Pending Requests</h1>
+       <h2 class="pendingcount">10</h2>
+  </mat-card>
+    
+  <mat-card class="cancelledcard">
+    <img class="cancelledbg" mat-card-image src="../../assets/cancelledbg.jpg"> 
+      <h1 class="cancelledtxt">Cancelled Requests</h1>
+       <h2 class="cancelledcount">10</h2>
+  </mat-card>
+
+  <mat-card class="workercard">
+    <img class="workerbg" mat-card-image src="../../assets/workerbg.jpg"> 
+      <h1 class="workertxt">Pending Requests</h1>
+       <h2 class="workercount">10</h2>
+  </mat-card>
+    
+  <mat-card class="regusercard">
+    <img class="reguserbg" mat-card-image src="../../assets/reguserbg.jpg"> 
+      <h1 class="regusertxt">Registered Users</h1>
+       <h2 class="regusercount">10</h2>
+  </mat-card>
+
 </div>
    
 <div>
