--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 
-<<<<<<< HEAD
-<app-employees></app-employees>
-=======
-<app-homepage></app-homepage>
->>>>>>> 58599e0ef378498dfd8e1f7350b292cff5ef41d9
+
+<app-adminpage></app-adminpage>
 <router-outlet></router-outlet>
