--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -15,6 +15,16 @@
       </div>
     </mat-drawer>
   
+    
+      <body>
+        <meta name="google-signin-client_id" content ="668350379601-atbiaujmphelbdel0f0hm563kjfo9kn1.apps.googleusercontent.com">
+        <script src ="https:apis.google.com/js/platform" async defer></script>
+      </body>
+    
+      <div class = "g-signin2">
+        
+      </div>
+   
       
         <p>
           <mat-toolbar class="toolbar">
