--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -195,61 +195,24 @@
       color: #14213D;
      
   }
-  
-  .adminicon
+
+  .dashboardtxt
   {
-    width: 250px;
-    height: 180px;
-    margin-left: 90px;
- 
-    
+    font-family: 'Trebuchet MS';
+    font-size: 25px;
+    color: #14213D;
+    margin-top: 20px;
+    margin-left: 80px;
   }
-
- .workercard
- {
-     width: 280px;
-     height: 40px;
-     float: right;
-     margin-right: 700px;
-     margin-top: -180px;
- }
-
-
- .workertxt
- {
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    color: white;
-    margin-top: -85px;
-    margin-left: 125px;
- }
-
- .workercount
- {
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    color: white;
-    margin-top: -5px;
-    margin-left: 125px;
- }
-
-.workerbg
-{
-    width: 313px;
-    height: 80px;
-}
-
-
- .registeredcard
+ .newreqcard
  {
   width: 280px;
   height: 40px;
-  float: right;
-  margin-right: 700px;
-  margin-top: -80px;
+  margin-left: 80px;
+  margin-top: 20px;
  }
 
- .registeredtxt
+ .newreqtxt
  {
   font-family: 'Trebuchet MS';
   font-size: 18px;
@@ -258,7 +221,7 @@
   margin-left: 125px;
  }
 
- .registeredcount
+ .newreqcount
  {
   font-family: 'Trebuchet MS';
   font-size: 18px;
@@ -267,7 +230,7 @@
   margin-left: 125px; 
  }
 
- .registeredbg
+ .newreqbg
  {
   width: 313px;
   height: 80px;
@@ -275,26 +238,28 @@
 
  .completedcard
  {
-    width: 280px;
-    height: 80px;
-    margin-left: 790px;
-    margin-top: -112px;
+  width: 280px;
+  height: 40px;
+  margin-left: 80px;
+  margin-top: 20px;
  }
 
  .completedtxt
  {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #14213D;
-    margin-top: -70px;
+  font-family: 'Trebuchet MS';
+  font-size: 15px;
+  color: white;
+  margin-top: -85px;
+  margin-left: 125px;
  }
 
  .completedcount
  {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #14213D;
-    margin-top: -10px; 
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -5px;
+  margin-left: 125px; 
  }
 
  .completedbg
@@ -303,29 +268,62 @@
     height: 80px;
  }
  
+ .pendingcard
+ {
+  width: 280px;
+  height: 40px;
+  margin-left: 410px;
+  margin-top: -164px;
+ }
+
+ .pendingtxt
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -85px;
+  margin-left: 125px;
+ }
+
+ .pendingcount
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -5px;
+  margin-left: 125px; 
+ }
+
+ .pendingbg
+ {
+  width: 313px;
+  height: 80px;
+ }
+
   .cancelledcard
  {
     width: 280px;
-    height: 80px;
-    float: right;
-    margin-right: 185px;
-    margin-top: -112px;
+    height: 40px;
+    margin-left: 410px;
+    margin-top: 19px;
  }
 
  .cancelledtxt
  {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #14213D;
-    margin-top: -70px;
+  font-family: 'Trebuchet MS';
+  font-size: 15px;
+  color: white;
+  margin-top: -85px;
+  margin-left: 125px;
  }
 
  .cancelledcount
  {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    color: #14213D;
-    margin-top: -10px; 
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -5px;
+  margin-left: 125px;
  }
 
  .cancelledbg
@@ -334,9 +332,74 @@
     height: 80px;
  }
 
+ .workercard
+ {
+    width: 280px;
+    height: 40px;
+    margin-left: 740px;
+    margin-top: -163px;
+ }
+
+ .workertxt
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 15px;
+  color: white;
+  margin-top: -85px;
+  margin-left: 125px;
+ }
+
+ .workercount
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -5px;
+  margin-left: 125px;
+ }
+
+ .workerbg
+ {
+    width: 313px;
+    height: 80px;
+ }
+
+ .regusercard
+ {
+    width: 280px;
+    height: 40px;
+    margin-left: 740px;
+    margin-top: 19px;
+ }
+
+ .regusertxt
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 15px;
+  color: white;
+  margin-top: -85px;
+  margin-left: 125px;
+ }
+
+ .regusercount
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -5px;
+  margin-left: 125px;
+ }
+
+ .reguserbg
+ {
+    width: 313px;
+    height: 80px;
+ }
+
  .mat-tab-group
  {
     width: 1350px;
+   
  }
 
  .searchfield
